A2- CORRIGÉ
