# tp2_etu/storage/api-docs/api-docs.json
@@ -9,13 +9,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/register": {
+        "/api/signup": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Register a new user",
-                "operationId": "8a56853624e025573120a09a4c75d468",
+                "operationId": "65b7ef1b1e076c033bf91055f53bd9a1",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -49,7 +49,7 @@
                     }
                 },
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
@@ -77,13 +77,13 @@
                 }
             }
         },
-        "/api/login": {
+        "/api/signin": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Login user",
-                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
+                "operationId": "b5cee56757c3c79c5b5f115fdc33f460",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -137,13 +137,13 @@
                 }
             }
         },
-        "/api/logout": {
+        "/api/signout": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Logout user",
-                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
+                "operationId": "b46f8611fc7d1123f2a3d573cee661c4",
                 "responses": {
                     "204": {
                         "description": "User successfully logged out"
